[MdTextButton] Apply rounded rectangle to background painting

In the final OnPaintBackground() method, it currently uses a standard
rectangle to "dim" the background on hover (or animation). This
resulted in some dimming outside a rounded button. This change uses a
rounded rectangle instead, using the existing corner radius.

Bug: 866136
Change-Id: Ifb8ad476e231049efbf73e1dc64c0c1f0f113897
Reviewed-on: https://chromium-review.googlesource.com/1156877
Commit-Queue: Kevin Bailey <krb@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#579819}
Former-commit-id: bfd30be326fc1a0b28131588730a635f1849ed0c